--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,2 @@
 spring.application.name = eurekaserver
-spring.config.import=optional:configserver:http://localhost:8888/
-
-eureka.server.enable-self-preservation = false
+spring.config.import=optional:configserver:http://${CONFIG_SERVER:localhost}:8888/
